kafka-0.11 finsh